@@ -4,9 +4,11 @@ LICENSE
 
 ===========================================================================
 
-This software and all associated files are released unter the GNU General 
+This software and most associated files are released unter the GNU General 
 Public License (GPL) as published by the Free Software Foundation (see 
 below).
+
+Chosen files might contain a different license, which applies to those files only.
 
 ===========================================================================
 
